--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,7 +44,7 @@
                             {% endif %}
                             {% if deal.name %}
                                 <div class="card-body pb-0">
-                                    <a href="{% url 'album_detail' deal.id %}" class="mb-0">{{ deal.name }}</a>
+                                    <a href="{% url 'album_detail' deal.id %}" class="mb-0"><h5 class="m-0">{{ deal.name }}</h5></a>
                                 </div>
                             {% endif %}
                             {% if deal.artist %}
@@ -57,7 +57,7 @@
                                 </div>
                             {% endif %}
                             <div class="card-body pb-0 pt-0">
-                                <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ deal.genre }}" class="mb-0 mt-0"> {{ deal.genre }}</a>
+                                <i class="fa fa-music" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ deal.genre }}" class="mb-0 mt-0"> {{ deal.genre }}</a>
                             </div>
                             <div class="card-footer pt-0 border-0 text-left">
                                 <div class="row">
@@ -73,10 +73,10 @@
                                         {% else %}
                                             <p class="mb-0"><small class="text-muted">No Rating</small></p>
                                         {% endif %}
-                                        <div class="card-footer pt-0 border-0 text-left">
+                                        <div class="card-footer p-0 border-0 text-left">
                                             {% if request.user.is_superuser %}
-                                                <small class="mb-0 text-left">
-                                                    <a href="{% url 'edit_album' deal.id %}">Edit</a> | 
+                                                <small>
+                                                    <a class="text-info" href="{% url 'edit_album' deal.id %}">Edit</a> | 
                                                     <a class="text-danger" href="{% url 'delete_album' deal.id %}">Delete</a>
                                                 </small>
                                             {% endif %}
@@ -131,7 +131,7 @@
                             {% endif %}
                             {% if new_arrival.name %}
                                 <div class="card-body pb-0">
-                                    <a href="{% url 'album_detail' new_arrival.id %}" class="mb-0">{{ new_arrival.name }}</a>
+                                    <a href="{% url 'album_detail' new_arrival.id %}" class="mb-0"><h5 class="m-0">{{ new_arrival.name }}</h5></a>
                             </div>
                             {% endif %}
                             {% if new_arrival.artist %}
@@ -144,7 +144,7 @@
                                 </div>
                             {% endif %}
                             <div class="card-body pb-0 pt-0">
-                                <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ new_arrival.genre }}" class="mb-0 mt-0"> {{ new_arrival.genre }}</a>
+                                <i class="fa fa-music" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ new_arrival.genre }}" class="mb-0 mt-0"> {{ new_arrival.genre }}</a>
                             </div>
                             <div class="card-footer pt-0 border-0 text-left">
                                 <div class="row">
@@ -160,10 +160,10 @@
                                         {% else %}
                                             <p class="mb-0"><small class="text-muted">No Rating</small></p>
                                         {% endif %}
-                                        <div class="card-footer pt-0 border-0 text-left">
+                                        <div class="card-footer p-0 border-0 text-left">
                                             {% if request.user.is_superuser %}
-                                                <small class="mb-0 text-left">
-                                                    <a href="{% url 'edit_album' new_arrival.id %}">Edit</a> | 
+                                                <small>
+                                                    <a class="text-info" href="{% url 'edit_album' new_arrival.id %}">Edit</a> | 
                                                     <a class="text-danger" href="{% url 'delete_album' new_arrival.id %}">Delete</a>
                                                 </small>
                                             {% endif %}
@@ -207,7 +207,7 @@
                             {% endif %}
                             {% if clearance.name %}
                                 <div class="card-body pb-0">
-                                    <a href="{% url 'album_detail' clearance.id %}" class="mb-0">{{ clearance.name }}</a>
+                                    <a href="{% url 'album_detail' clearance.id %}" class="mb-0"><h5 class="m-0">{{ clearance.name }}</h5></a>
                                 </div>
                             {% endif %}
                             {% if clearance.artist %}
@@ -220,7 +220,7 @@
                                 </div>
                             {% endif %}
                             <div class="card-body pb-0 pt-0">
-                                <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ clearance.genre }}" class="mb-0 mt-0"> {{ clearance.genre }}</a>
+                                <i class="fa fa-music" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ clearance.genre }}" class="mb-0 mt-0"> {{ clearance.genre }}</a>
                             </div>
                             <div class="card-footer pt-0 border-0 text-left">
                                 <div class="row">
@@ -236,10 +236,10 @@
                                         {% else %}
                                             <p class="mb-0"><small class="text-muted">No Rating</small></p>
                                         {% endif %}
-                                        <div class="card-footer pt-0 border-0 text-left">
+                                        <div class="card-footer p-0 border-0 text-left">
                                             {% if request.user.is_superuser %}
-                                                <small class="mb-0 text-left">
-                                                    <a href="{% url 'edit_album' clearance.id %}">Edit</a> | 
+                                                <small>
+                                                    <a class="text-info" href="{% url 'edit_album' clearance.id %}">Edit</a> | 
                                                     <a class="text-danger" href="{% url 'delete_album' clearance.id %}">Delete</a>
                                                 </small>
                                             {% endif %}
@@ -282,14 +282,14 @@
                                 </a>
                             {% endif %}
                             {% if featured.name %}
-                                <div class="card-body pb-0">
-                                    <a href="{% url 'artist_detail' featured.id %}" class="mb-0">{{ featured.name }}</a>
+                                <div class="card-body pb-0 text-center">
+                                    <a href="{% url 'artist_detail' featured.id %}" class="mb-0"><h2>{{ featured.name }}</h2></a>
                                 </div>
                             {% endif %}
-                            <div class="card-footer pt-0 border-0 text-left">
+                            <div class="p-0 border-0 text-center">
                                 {% if request.user.is_superuser %}
                                     <small>
-                                        <a href="{% url 'edit_artist' featured.id %}">Edit</a> | 
+                                        <a class="text-info" href="{% url 'edit_artist' featured.id %}">Edit</a> | 
                                         <a class="text-danger" href="{% url 'delete_artist' featured.id %}">Delete</a>
                                     </small>
                                 {% endif %}
@@ -316,7 +316,7 @@
                                     {% endif %}
                                     {% if album.name %}
                                         <div class="card-body pb-0">
-                                            <a href="{% url 'album_detail' album.id %}" class="mb-0">{{ album.name }}</a>
+                                            <a href="{% url 'album_detail' album.id %}" class="mb-0"><h5 class="m-0">{{ album.name }}</h5></a>
                                         </div>
                                     {% endif %}
                                     {% if album.artist %}
@@ -329,7 +329,7 @@
                                         </div>
                                     {% endif %}
                                     <div class="card-body pb-0 pt-0">
-                                        <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
+                                        <i class="fa fa-music" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
                                     </div>
                                     <div class="card-footer pt-0 border-0 text-left">
                                         <div class="row">
@@ -345,10 +345,10 @@
                                                 {% else %}
                                                     <p class="mb-0"><small class="text-muted">No Rating</small></p>
                                                 {% endif %}
-                                                <div class="card-footer pt-0 border-0 text-left">
+                                                <div class="card-footer p-0 border-0 text-left">
                                                     {% if request.user.is_superuser %}
-                                                        <small class="mb-0 text-left">
-                                                            <a href="{% url 'edit_album' album.id %}">Edit</a> | 
+                                                        <small>
+                                                            <a class="text-info" href="{% url 'edit_album' album.id %}">Edit</a> | 
                                                             <a class="text-danger" href="{% url 'delete_album' album.id %}">Delete</a>
                                                         </small>
                                                     {% endif %}
@@ -404,7 +404,7 @@
                         {% endif %}
                         {% if album.name %}
                             <div class="card-body pb-0">
-                                <a href="{% url 'album_detail' album.id %}" class="mb-0">{{ album.name }}</a>
+                                <a href="{% url 'album_detail' album.id %}" class="mb-0"><h5 class="m-0">{{ album.name }}</h5></a>
                             </div>
                         {% endif %}
                         {% if album.artist %}
@@ -417,7 +417,7 @@
                             </div>
                         {% endif %}
                         <div class="card-body pb-0 pt-0">
-                            <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
+                            <i class="fa fa-music" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
                         </div>
                         <div class="card-footer pt-0 border-0 text-left">
                             <div class="row">
@@ -433,10 +433,10 @@
                                     {% else %}
                                         <p class="mb-0"><small class="text-muted">No Rating</small></p>
                                     {% endif %}
-                                    <div class="card-footer pt-0 border-0 text-left">
+                                    <div class="card-footer p-0 border-0 text-left">
                                         {% if request.user.is_superuser %}
-                                            <small class="mb-0 text-left">
-                                                <a href="{% url 'edit_album' album.id %}">Edit</a> | 
+                                            <small>
+                                                <a class="text-info" href="{% url 'edit_album' album.id %}">Edit</a> | 
                                                 <a class="text-danger" href="{% url 'delete_album' album.id %}">Delete</a>
                                             </small>
                                         {% endif %}
