--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@
 
 body { 
     font-family: 'Righteous', cursive;
-    background-color: #DEDEDE;
+    background-color: #18191A;
     color: black;
 }
 
