--- a/products/templates/products/artists.html
+++ b/products/templates/products/artists.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Artists</h2>
+                <h2 class="logo-font page-title">Artists</h2>
                 <hr class="w-50 mb-1">
             </div>
         </div>
@@ -23,7 +23,7 @@
                 <div class="row mt-1 mb-2">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border-{% if current_sorting != 'None_None' %}purple{% else %}black{% endif %}">
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                                 <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
                                 <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left">
+                        <p class="mt-3 text-center text-md-left search-terms-and-sorting">
                             {% if current_sorting != 'None_None' %}
                                 <span class="small"><a href="{% url 'artists' %}">Artists Home</a> | </span>
                             {% endif %}
