--- a/products/templates/products/album_detail.html
+++ b/products/templates/products/album_detail.html
@@ -12,6 +12,7 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
+        <h1 class="mb-0 text-center page-title">{{ album.name }}</h1>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 d-flex justify-content-center">
                 <div class="image-container my-5">
@@ -53,7 +54,7 @@
                     </div>
                     {% if album.rating %}
                         <div class="card-body p-0 text-center text-md-left">
-                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ album.rating }} / 5</small>
+                            <small class=""><i class="fas fa-star mr-1"></i>{{ album.rating }} / 5</small>
                         </div>    
                     {% else %}
                         <div class="card-body p-0 text-center text-md-left">
