--- a/products/templates/products/edit_artist.html
+++ b/products/templates/products/edit_artist.html
@@ -16,12 +16,12 @@
             <div class="col-12 col-md-6">
                 <hr>
                 <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Edit an Artist</h5>
+                <h5>Edit an Artist</h5>
                 <hr>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row dark-background-light-text-area">
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'edit_artist' artist.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
@@ -33,8 +33,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'albums' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Update Artist</button>
+                        <a class="btn btn-outline-black" href="{% url 'albums' %}">Cancel</a>
+                        <button class="btn btn-black" type="submit">Update Artist</button>
                     </div>
                 </form>
             </div>            
