--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,6 +69,20 @@ body {
     margin-bottom: 40px;
 }
 
+.dark-background-light-text-area a, input{
+    color: white;
+    
+}
+
+.dark-background-light-text-area .btn {
+    border: 1px solid white;
+    color: white;
+}
+
+.toast {
+    color: black;
+}
+
 
 /* ------------------------------- Navbar */ 
 
@@ -240,10 +254,17 @@ hr {
 
 .album-details-container {
     word-break: break-word;
+    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000;
 }
 
-.album-details-container a{
-    color: black;
+.album-details-container a, input{
+    color: white;
+    
+}
+
+.album-details-container .btn {
+    border: 1px solid white;
+    color: white;
 }
 
 .image-container {
@@ -281,8 +302,40 @@ hr {
 }
 
 
-/* ------------------------------- Artists */
+/* ------------------------------- Album and Artist Forms */
 
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    border-radius: 0;
+}
+
+#filename {
+    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000;
+}
+
+
+/* ------------------------------- Artists */
 
 
 /* ------------------------------- Artist Detail */
@@ -291,13 +344,17 @@ hr {
     color: white;
 }
 
-.artist-detail-albums-container a{
+.artist-detail-albums-container a {
     color: black;
 }
 
 .artist-detail-banner-image {
     border-radius: 5px;
 
+}
+
+.artist-detail-edit {
+    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000;
 }
 
 
