--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -21,15 +21,15 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row dark-background-light-text-area">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
-                <p class="text-muted">Order Summary ({{ product_count }})</p>
+                <p>Order Summary ({{ product_count }})</p>
                 <div class="row">
                     <div class="col-7 offset-2">
-                        <p class="mb-1 mt-0 small text-muted">Item</p>
+                        <p class="mb-1 mt-0 small">Item</p>
                     </div>
                     <div class="col-3 text-right">
-                        <p class="mb-1 mt-0 small text-muted">Subtotal</p>
+                        <p class="mb-1 mt-0 small ">Subtotal</p>
                     </div>
                 </div>
                 {% for item in cart_items %}
@@ -45,13 +45,13 @@
                         </div>
                         <div class="col-7">
                             <p class="my-0"><strong>{{ item.album.name }}</strong></p>
-                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="my-0 small">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
                             {% if item.album.special_offer_price %}
-                                <p class="my-0 text-muted">€{{ item.album.special_offer_price | calc_subtotal:item.quantity }}</p>
+                                <p class="my-0">€{{ item.album.special_offer_price | calc_subtotal:item.quantity }}</p>
                             {% else %}
-                                <p class="my-0 text-muted">€{{ item.album.price | calc_subtotal:item.quantity }}</p>
+                                <p class="my-0">€{{ item.album.price | calc_subtotal:item.quantity }}</p>
                             {% endif %}
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Please fill out the form below to complete your order</p>
+                <p>Please fill out the form below to complete your order</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
                     <fieldset class="rounded px-3 mb-5">
@@ -100,10 +100,10 @@
 							{% endif %}
 						</div>
                     </fieldset>
-                    <fieldset class="px-3">
-                        <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                    <fieldset class="px-3 stripe-card-fieldset">
+                        <legend class="fieldset-label small px-2 w-auto">Payment</legend>
                         <!-- A Stripe card element will go here -->
-                        <div class="mb-3" id="card-element"></div>
+                        <div class="mb-3 p-3" id="card-element"></div>
                         <!-- Used to display form errors -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                         <!-- Pass the client secret to the view so we can get the payment intent id -->
@@ -111,13 +111,13 @@
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">                    
-						<a href="{% url 'view_cart' %}" class="btn btn-outline-black rounded-0">
+						<a href="{% url 'view_cart' %}" class="btn btn-outline-black round-button">
 							<span class="icon">
 								<i class="fas fa-chevron-left"></i>
 							</span>
 							<span class="font-weight-bold">Adjust Cart</span>
 						</a>
-						<button id="submit-button" class="btn btn-black rounded-0">
+						<button id="submit-button" class="btn btn-black round-button">
 							<span class="font-weight-bold">Complete Order</span>
 							<span class="icon">
 								<i class="fas fa-lock"></i>
