--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -11,13 +11,13 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container dark-background-light-text-area">
         <div class="row">
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4">Thank You</h2>
                 <hr>
-                <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black">Your order information is below. A confirmation email will be sent to <span class="font-weight-bold">{{ order.email }}</span>.</p>
             </div>
         </div>
 
@@ -194,7 +194,7 @@
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% else %}
-                    <a href="{% url 'albums' %}?category=deals" class="btn btn-black rounded-0 my-2">
+                    <a href="{% url 'albums' %}?category=deals" class="btn btn-black my-2">
                         <span class="icon mr-2">
                             <i class="fas fa-gifts"></i>
                         </span>
