--- a/products/templates/products/edit_album.html
+++ b/products/templates/products/edit_album.html
@@ -33,8 +33,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black" href="{% url 'albums' %}">Cancel</a>
-                        <button class="btn btn-black" type="submit">Update Album</button>
+                        <a class="btn btn-outline-black round-button" href="{% url 'albums' %}">Cancel</a>
+                        <button class="btn btn-black round-button" type="submit">Update Album</button>
                     </div>
                 </form>
             </div>            
