--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -19,9 +19,11 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <a class="btn btn-outline-black round-button" href="{% url 'account_login' %}">Back to Login</a>
+        <input class="btn round-button" type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
+
+    <hr>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
