--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,4 +1,5 @@
 {% extends "account/base.html" %}
+{% load account socialaccount %}
 
 {% load i18n %}
 
@@ -11,14 +12,36 @@
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
+{% get_providers as socialaccount_providers %}
+
+{% if socialaccount_providers %}
+<p>{% blocktrans with site.name as site_name %}You can sign up with your Spotify account.{% endblocktrans %}</p>
+
+<div class="socialaccount_ballot">
+
+  <ul class="socialaccount_providers">
+    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+  </ul>
+
+</div>
+
+{% include "socialaccount/snippets/login_extra.html" %}
+
+<p>Or, sign up
+  for an account and sign in below:</p>
+
+{% endif %}
+
+
+
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form|crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
+  <a class="btn btn-outline-black round-button" href="{% url 'account_login' %}">Back to Login</a>
+  <button class="round-button btn" type="submit">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
