--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,5 +1,7 @@
 /* ------------------------------- Checkout */
 
+/* Hides overlay as default, makes it the topmost element in z-index
+and makes it cover the entire screen */
 #loading-overlay {
 	display: none;
 	position: fixed;
@@ -7,10 +9,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
+    background: rgba(70, 1, 39, 0.85);
     z-index: 9999;
 }
 
+/* Centers loading spinner */
 .loading-spinner {
 	display: flex;
     align-items: center;
@@ -19,6 +22,8 @@
     height: 100%;
 }
 
+/* Makes text contrast with background for the card input 
+and styles borders */
 #card-element {
     background-color: white;
     border-radius: .25rem;
@@ -28,6 +33,8 @@
     color: black;
 }
 
+/* Styles the background of the order confirmation info so it
+has legible contrast */
 .order-confirmation-wrapper {
     word-break: break-all;
     color: black;
