--- a/products/templates/products/artist_detail.html
+++ b/products/templates/products/artist_detail.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- Overlay and Artist -->
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
@@ -44,6 +45,7 @@
             </div>
         </div>
     </div>
+    <!-- Albums -->
     <div class="row">
         <div class="product-container col-10 offset-1">
             <div class="row">
@@ -103,6 +105,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Horizontal Rules -->
                     {% if forloop.counter|divisibleby:1 %}
                         <div class="col-12 d-sm-none mb-5">
                             <hr>
