--- a/products/templates/products/artists.html
+++ b/products/templates/products/artists.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- Overlay and Title -->
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
@@ -25,6 +26,7 @@
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
+                    <!-- Sorting -->
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
                             <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border-{% if current_sorting != 'None_None' %}purple{% else %}black{% endif %}">
@@ -36,6 +38,7 @@
                             </select>
                         </div>
                     </div>
+                    <!-- Current Sorting -->
                     <div class="col-12 col-md-6 order-md-first">
                         <p class="mt-3 text-center text-md-left search-terms-and-sorting">
                             {% if current_sorting != 'None_None' %}
@@ -51,6 +54,7 @@
                         <a href="{% url 'artists' %}">here</a>.
                     </p>
                 {% endif %}
+                <!-- Artists -->
                 <div class="row justify-content-center align-items-center">
                     {% for artist in artists %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 artists-container">
@@ -104,6 +108,7 @@
             </div>
         </div>
     </div>
+    <!-- Back to Top Button -->
     <div class="btt-button shadow-sm">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
