--- a/products/templates/products/edit_artist.html
+++ b/products/templates/products/edit_artist.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- Overlay and Title -->
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -24,7 +25,7 @@
                 <hr>
             </div>
         </div>
-
+        <!-- Form -->
         <div class="row dark-background-light-text-area">
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'edit_artist' artist.id %}" class="form mb-2" enctype="multipart/form-data">
