Formatted and commented all files in profiles app.

--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -1,5 +1,6 @@
 /* ------------------------------- Profile */
 
+/* Colours text to improve constrast */
 .dark-background-light-text-area table {
     color: white;
 }
