--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- Overlay and Title -->
     <div class="overlay"></div>
     <div class="container dark-background-light-text-area">
         <div class="row">
@@ -24,6 +25,7 @@
             </div>
         </div>
         <div class="row">
+            <!-- Default Delivery Info -->
             <div class="col-12 col-lg-6">
                 <p>Default Delivery Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
@@ -32,6 +34,7 @@
                     <button class="btn btn-black text-uppercase float-right">Update Information</button>
                 </form>
             </div>
+            <!-- Order History -->
             <div class="col-12 col-lg-6">
                 <p>Order History</p>
                 <div class="order-history table-responsive">
